# redistricting-agent

./: .gitignore  NOTION_SETUP.md  PLAN.md  README.md  SETUP.md  community_form.yaml  form_filler.py  geocoding.py  main.py  notion_backend.py  pyproject.toml  supabase_backend.py  supabase_schema.sql
tests/: README.md  test_full_flow.py  test_geocode_save.py  test_geocoding.py  test_geocoding_simple.py  test_notion.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: CommunityMap.tsx  Dashboard.tsx  MapInner.tsx  SubmissionDetail.tsx  SubmissionTable.tsx
web/src/lib/: supabase.ts
